# Fast-API-Demo

./: README.md
fast-api/: myapi.py  pyproject.toml
